--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-syntax-highlighter": "^15.5.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "classnames": "^2.3.2",
+    "firebase": "^9.20.0",
+    "lodash.shuffle": "^4.2.0",
+    "prop-types": "^15.8.1",
+    "uuid": "^9.0.0",
+    "zustand": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
